Results section of descriptive chapter

--- a/2-methods.qmd
+++ b/2-methods.qmd
@@ -528,7 +528,7 @@ Bacterial DNA extraction on the stored selenite samples was done in batches with
 
 For the monoplex-qPCR, the *ttr* primers and probe were designed and validated by Federal Institute for Risk Assessment, Berlin, Germany, according to the published DNA sequence of the *S. enterica* serotype Typhimurium *ttr* locus for *Salmonella* detection (GenBank accession no. [AF282268](https://www.ncbi.nlm.nih.gov/nuccore/AF282268)). The use of *ttr* was based on [@chirambo_performance_2020]. For the monoplex qPCR, approximately 200μl top layer of frozen Selenite F broth overnight stool culture, was suspended in 500 μl of PBS.
 
-A previously-optimised in-house PCR protocol was used [@chirambo_performance_2020]. Briefly, the master mix for RT-PCR was prepared using pre-defined quantities. A total of 20μl master-mix for each sample was comprised of the following: 12.5μl Platinum *®* Quantitative PCR Super Mix-UDG (Life Technologies, USA, Catalog number: 11730025), 0.10μl specific forward primer, 0.10 specific reverse primer, 0.10 specific probe (all primers and probes at 200nM), 0.05μl ROX reference dye (Life Technologies, USA, Catalog number: 12223012) at 50nM final concentration, and 7.15μl nuclease-free water. This mixture was transferred to 96-well plate PCR wells. 5μl of test DNA, positive controls DNA (DNA from D23580), technical extraction negative control, and assay negative control (UV treated water) were added in triplicates to appropriate wells containing 20ul of master-mix. The qPCR was run for 40 cycles using Applied Biosystems® 7500 Real-Time PCR Systems (Life Technologies, USA). The following cycling conditions were used; initial denaturation at 95°C for 1 minute, denaturation at 95°C for 15 seconds, annealing/extension at 60°C for 30 seconds, final extension: 12°C. The threshold was set in the lag phase. An assay was considered to have passed when the positive controls were positive, and both the technical extraction negative and assay negative controls were negative. Test sample cycle threshold (Ct) values were evaluated after subtracting the baseline value. Samples with cycle threshold (Ct) values of less than or equal to 35 were considered positive.
+A previously-optimised in-house PCR protocol was used [@chirambo_performance_2020]. Briefly, the master mix for RT-PCR was prepared using pre-defined quantities. A total of 20μl master-mix for each sample was comprised of the following: 12.5μl Platinum *®* Quantitative PCR Super Mix-UDG (Life Technologies, USA, Catalog number: 11730025), 0.10μl specific forward primer, 0.10 specific reverse primer, 0.10 specific probe (all primers and probes at 200nM), 0.05μl ROX reference dye (Life Technologies, USA, Catalog number: 12223012) at 50nM final concentration, and 7.15μl nuclease-free water. This mixture was transferred to 96-well plate PCR wells. 5μl of test DNA, positive controls DNA (DNA from D23580), technical extraction negative control, and assay negative control (UV treated water) were added in triplicates to appropriate wells containing 20ul of master-mix. The qPCR was run for 40 cycles using Applied Biosystems® 7500 Real-Time PCR Systems (Life Technologies, USA). The following cycling conditions were used; initial denaturation at 95°C for 1 minute, denaturation at 95°C for 15 seconds, annealing/extension at 60°C for 30 seconds, final extension: 12°C. The threshold was set in the lag phase. An assay was considered to have passed when the positive controls were positive, and both the technical extraction negative and assay negative controls were negative. Test sample cycle threshold (Ct) values were evaluated after subtracting the baseline value. Samples with cycle threshold (Ct) values of less than or equal to 35 were considered positive, which was defined using mixture models (@fig-PCRMixMod).
 
 ### Stool genome sequencing
 
